--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="hero">
             <div class="hero-content flex-col lg:flex-row">
             <div>
-                <h1 class="text-7xl font-extrabold">
+                <h1 class="text-5xl md:text-7xl font-extrabold">
                     It's good <br>
                     tea time at The <br>
                     Tea House
@@ -44,10 +44,10 @@
                     Explore More
                 </button>
               </div>
-              <div>
-                <img src="images/banner.png" class="max-w-sm" />
+              <div class="">
+                <img src="images/banner.png" class="max-w-xs md:max-w-sm" />
                 <!-- rating badge -->
-                <div class="-mt-14 flex items-center gap-3 drop-shadow-lg bg-white p-5 w-56 rounded-xl">
+                <div class="-mt-10 md:-mt-14 flex items-center gap-3 drop-shadow-lg bg-white p-5 w-56 rounded-xl">
                     <i class="fa-sharp fa-solid fa-star text-3xl" style="color: #FFD43B;"></i>
                     <div>
                         <h3 class="text-3xl">5.0</h3>
@@ -105,8 +105,41 @@
                 </div>
             </div>
         </section>
-    </main>
 
+        <!-- great tea -->
+        <section class="gap-24 flex flex-col lg:flex-row">
+            <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+              <div class="rounded-xl h-36 bg-gradient-to-r from-red-200 to-orange-100"></div>
+              <div class="row-span-2 rounded-xl bg-[#e6a6231a] flex
+              justify-center items-center">
+                <img src="images/fresh-1.png" alt="">
+              </div>
+              <div class="row-span-2 rounded-xl bg-[#5776391a] flex justify-center items-center">
+                <img src="images/fresh-2.png" alt="">
+              </div>
+              <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF00]"></div>
+            </div>
+            <div class="space-y-5 flex-1">
+              <h3 class="text-5xl font-extrabold">
+                Great Tea, Freshly <br> Presented
+              </h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate impedit alias harum at enim blanditiis, consectetur dignissimos voluptas cum reprehenderit.</p>
+              <h4 class="text-xl font-extrabold">
+                Unique Taste
+              </h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, repellendus.</p>
+              <h4 class="text-xl font-extrabold">
+                Premium Quality
+              </h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, repellendus.</p>
+            </div>
+        </section>
+        <!-- supper client -->
+        <section>
+          
+        </section>
+
+    </main>
     <footer>
 
     </footer>
