--- a/index.html
+++ b/index.html
@@ -135,8 +135,69 @@
             </div>
         </section>
         <!-- supper client -->
-        <section>
-          
+        <section class="my-24 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#f00] px-16 py-24">
+          <div class="flex items-center">
+            <div class="space-y-5 pr-5">
+              <h2 class="text-5xl font-bold text-white">
+                Meet Our Super <br>
+                Clients
+              </h2>
+              <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt magnam voluptas assumenda, doloremque rerum ducimus voluptates ipsam nostrum eum ipsum iste fuga laudantium aspernatur?</p>
+              <button class="btn btn-primary">
+                Show All
+              </button>
+            </div>
+          </div>
+          <div class="relative">
+            <!-- next review -->
+          <div class="opacity-50 z-10 mb-16 relative p-10 rounded-lg bg-white lg:w-[430px]">
+            <img class="absolute -top-5 -left-5 border-solid border-white border-4 rounded-full bg-white" src="images/client.png" alt="">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. In deleniti similique excepturi eum?
+            </p>
+            <h4 class="font-bold mt-5">
+              Ilham Huda
+            </h4>
+            <p class="font-medium ">
+              Businessman
+            </p>
+            <div class="flex justify-end">
+              <img src="images/circles.png" alt="">
+            </div>
+          </div>
+          <!-- current review -->
+          <div class="absolute top-40 z-20 p-10 rounded-lg bg-white lg:-left-10 lg:w-[430px]">
+            <img class="absolute -top-5 -left-5 border-solid border-white border-4 rounded-full bg-white" src="images/client.png" alt="">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. In deleniti similique excepturi eum?
+            </p>
+            <h4 class="font-bold mt-5">
+              Ilham Huda
+            </h4>
+            <p class="font-medium ">
+              Businessman
+            </p>
+            <div class="flex justify-end">
+              <img src="images/circles.png" alt="">
+            </div>
+          </div>
+          <!-- previous review -->
+          <div class="opacity-50 relative z-10 p-10 rounded-lg bg-white lg:w-[430px]">
+            <img class="absolute -top-5 -left-5 border-solid border-white border-4 rounded-full bg-white" src="images/client.png" alt="">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. In deleniti similique excepturi eum?
+            </p>
+            <h4 class="font-bold mt-5">
+              Ilham Huda
+            </h4>
+            <p class="font-medium ">
+              Businessman
+            </p>
+            <div class="flex justify-end">
+              <img src="images/circles.png" alt="">
+            </div>
+          </div>
+          </div>
         </section>
 
     </main>
